[project]
name = "cmeel-urdfdom"
version = "3.1.0"
description = "cmeel distribution for urdfdom, URDF parser"
readme = "urdfdom/README.md"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmeel/cmeel-urdfdom"

[tool.cmeel]
source = "urdfdom"

[build-system]
requires = ["cmeel[build]", "cmeel-urdfdom-headers", "cmeel-tinyxml", "cmeel-console-bridge"]
build-backend = "cmeel.build"
