[project]
name = "cmeel-urdfdom"
version = "3.1.0.1"
description = "cmeel distribution for urdfdom, URDF parser"
readme = "urdfdom/README.md"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-urdfdom"

[tool.cmeel]
build-number = 2
source = "urdfdom"

[build-system]
requires = ["cmeel[build]", "cmeel-urdfdom-headers", "cmeel-tinyxml", "cmeel-console-bridge"]
build-backend = "cmeel.build"
