[build-system]
build-backend = "cmeel.build"
requires = ["cmeel-console-bridge", "cmeel-tinyxml", "cmeel-urdfdom-headers", "cmeel[build]"]

[project]
description = "cmeel distribution for urdfdom, URDF parser"
license = "BSD-3-Clause"
name = "cmeel-urdfdom"
readme = "urdfdom/README.md"
requires-python = ">= 3.7"
version = "3.1.0.3"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-urdfdom"

[tool.cmeel]
build-number = 1
py3-none = true
source = "urdfdom"

[tool.tomlsort]
all = true
